<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:id="@+id/basketball">






    <View
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:layout_width="1dp"
        android:layout_height="350dp"
        android:layout_marginTop="80dp"/>

    <TextView

         android:id="@+id/basketText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
         android:gravity="center_horizontal"
         android:text="@string/basket"
         android:textSize="56sp"
         android:textStyle="bold"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/basketText"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
    <EditText
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:imeActionLabel="Done"
        android:maxLength="18"
        android:id="@+id/edit_text_teamA"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="enter team name"/>

    <TextView

        android:id="@+id/team_a_name"
        style="@style/teamName"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="TeamA"/>

    <TextView
        android:id="@+id/score_team_1"
        style="@style/scoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="0"/>
    <Button
        android:id="@+id/three_points_a"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/three"/>

    <Button
        android:id="@+id/two_points_a"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/two"/>

    <Button
        android:id="@+id/one_point_a"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one"/>
        </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:imeActionLabel="Done"
            android:maxLength="18"
            android:id="@+id/edit_text_teamB"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter team name"/>

        <TextView
            android:id="@+id/team_b_name"
            android:textAllCaps="true"
            style="@style/teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="TeamB"/>

        <TextView
            android:id="@+id/score_team_2"
            style="@style/scoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="0"/>
        <Button
            android:id="@+id/three_points_b"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three"/>

        <Button
            android:id="@+id/two_points_b"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two"/>

        <Button
            android:id="@+id/one_point_b"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one"/>
    </LinearLayout>

    </LinearLayout>


   <Button
       android:id="@+id/reset_basketball"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="32dp"
       android:text="@string/reset"
       />
</RelativeLayout>