<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_soccer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.android.keepscore.soccer">

    <View
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:layout_width="1dp"
        android:layout_height="400dp"
        android:layout_marginTop="60dp"/>

    <View
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"/>

    <View
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/soccer"
        android:textSize="56sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:orientation="horizontal">

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/soccer_a_team"
                style="@style/soccerTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="TeamA"/>

            <TextView
                android:id="@+id/soccer_goal_a"
                style="@style/scoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="     Fouls                Ejections"/>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Fouls"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/ejections"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textSize="24sp"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/goal_team_a"
                style="@style/ballStyle"
                android:onClick="teamAGoal"
                android:text="@string/goal"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/foul_button_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="14dp"
                    android:layout_weight="1"
                    android:text="@string/foul"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/ejection_button_a"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"

                    android:text="@string/eject"
                    android:textSize="12sp"/>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/soccer_b_team"
                style="@style/soccerTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="TeamB"/>

            <TextView
                android:id="@+id/soccer_goal_b"
                style="@style/scoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="     Fouls                Ejections"/>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Fouls_teamb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/ejections_teamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textSize="24sp"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/goal_team_b"
                style="@style/ballStyle"
                android:text="@string/goal"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/foul_button_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="14dp"
                    android:layout_weight="1"
                    android:text="@string/foul"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/ejection_button_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/eject"
                    android:textSize="12sp"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/soccer_reset"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:onClick="reset"
        android:text="@string/reset"/>

</RelativeLayout>
